--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ dist: trusty
 addons:
   chrome: stable
 before_install:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 &
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 services:
   - mongodb
   - redis-server
