--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "aws-sdk": "^2.188.0",
+    "@aws-sdk/client-s3": "^3.18.0",
+    "@aws-sdk/s3-request-presigner": "^3.18.0",
     "body-parser": "^1.17.2",
     "concurrently": "^3.5.0",
     "cookie-session": "^2.0.0-beta.2",
@@ -36,6 +37,6 @@
     "path-parser": "^2.0.2",
     "puppeteer": "^1.20.0",
     "redis": "^2.8.0",
-    "uuid": "^3.2.1"
+    "uuid": "^3.4.0"
   }
 }
