--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.18.0",
     "@aws-sdk/s3-request-presigner": "^3.18.0",
-    "body-parser": "^1.17.2",
-    "concurrently": "^3.5.0",
-    "cookie-session": "^2.0.0-beta.2",
-    "express": "^4.15.3",
+    "body-parser": "^1.19.0",
+    "concurrently": "^3.6.1",
+    "cookie-session": "^2.0.0-rc.1",
+    "express": "^4.17.1",
     "jest": "^26.6.3",
     "migrate-mongoose": "^4.0.0",
-    "mongoose": "^5.12.3",
+    "mongoose": "^5.12.13",
     "nodemon": "^2.0.7",
     "passport": "^0.3.2",
     "passport-google-oauth20": "^2.0.0",
