--- a/client/package.json
+++ b/client/package.json
@@ -2,22 +2,15 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
-  "proxy": {
-    "/auth/*": {
-      "target": "http://localhost:5000"
-    },
-    "/api/*": {
-      "target": "http://localhost:5000"
-    }
-  },
   "dependencies": {
     "axios": "^0.21.1",
+    "http-proxy-middleware": "^2.0.0",
     "materialize-css": "^0.100.2",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^5.1.2",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.0.10",
+    "react-scripts": "^4.0.3",
     "redux": "^3.7.2",
     "redux-form": "^7.4.3",
     "redux-thunk": "^2.3.0"
@@ -27,5 +20,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
