--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "concurrently": "^3.6.1",
     "cookie-session": "^2.0.0-rc.1",
     "express": "^4.17.1",
-    "jest": "^26.6.3",
+    "jest": "26.6.0",
     "migrate-mongoose": "^4.0.0",
     "mongoose": "^5.12.13",
     "nodemon": "^2.0.7",
